--- a/views/main.pug
+++ b/views/main.pug
@@ -21,3 +21,7 @@ block content
           .name #{file.name}
           .size #{file.size}
           .date #{file.lastModify}
+    .upload-btn
+    form(action='/upload', id='upload-form', method='post', encType='multipart/form-data')
+      input(type="file", id="upload-input", name="fileList")
+    script(src='/js/main.js')
