feat: 🎸 新增拖拽动画

--- a/views/main.pug
+++ b/views/main.pug
@@ -2,6 +2,7 @@ extends ./component/layout
 
 block content
   body
+    .upload-modal
     .toolbar
       h3 Click file name to download
     .file-table
