--- a/views/style/page.styl
+++ b/views/style/page.styl
@@ -85,50 +85,41 @@ row-icon-mixin() {
   transition all ease-in-out 300ms
   pointer-events none
 
-  @keyframes borderRadius {
+  @keyframes enter {
     to {
       border-radius 30px
     }
   }
 
-  &::before
-    content ''
+  .upload-area
     border 1px dashed #000
     border-radius 50%
-    width 48px
-    height 48px
+    width 50px
+    height 50px
     position fixed
     left calc(100vw - 80px)
-    top calc(100vh - 80px)
-    transition left ease-in-out 300ms ,top ease-in-out 300ms, height ease-in-out 300ms, width ease-in-out 300ms, margin ease-in-out 300ms
+    top calc(100vh - 90px)
+    transition left ease-in-out 100ms ,top ease-in-out 100ms, height ease-in-out 100ms, width ease-in-out 100ms, margin ease-in-out 100ms
     transform rotate(360deg)
-
-  &::after
-    content ''
-    height 100vh
-    width 100vw
-    position fixed
     display flex
     align-items center
     justify-content center
-    font-size 30px
-    color grey
+    font-size 0
     font-style italic
+    color grey
 
   &.drag-over
     z-index 1
     background-color rgba(255, 255, 255, 0.9)
 
-    &::before
+    .upload-area
       margin 30px
       height calc(100vh - 60px)
       width calc(100vw - 60px)
       left 0
       top 0
-      animation borderRadius linear 50ms forwards
-
-    &::after
-      content: '来 ～ 搁这儿放'
+      animation enter linear 50ms forwards
+      font-size 30px
 
   &.drag-exit
     @keyframes exit {
@@ -139,6 +130,6 @@ row-icon-mixin() {
         transform rotate(360deg)
       }
     }
-    &::before
-      animation borderRadius linear 50ms 300ms forwards, exit ease-in-out 300ms 300ms
+    .upload-area
+      animation enter linear 50ms 300ms forwards, exit ease-in-out 300ms 300ms
 
