fix: 🐛 修复表格样式问题

--- a/views/style/page.styl
+++ b/views/style/page.styl
@@ -8,7 +8,7 @@ row-cell-mixin() {
   .size, .date {
     flex none
     padding 0 .5em
-    width $sizeWidth
+    min-width 144px
     text-align right
   }
 }
